Modificacion del index
Se ha modificado el index de manera local ahora al hosting gratuito

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ $(document).ready(function inicio(){
   // alert("Listo");
        $.ajax({
         type:"POST",
-        url:"envio.php",
+        url:"http://evasistemas7.260mb.net",
         data:"nombre="+nom+"&apellidos="+app+"&email="+email,
         success:recepcion
         
